fix overflow issue

--- a/jmtesting/css/pattern-library-3.css
+++ b/jmtesting/css/pattern-library-3.css
@@ -138,7 +138,8 @@
 
 @media only screen and (max-width: 768px) {
   .experimental .flex {
-     overflow:auto;   /* draws a line in desktop view under selection... gonna need a hand, for now writing mobile variant */
+    overflow-y:hidden;   /* draws a line in desktop view under selection... gonna need a hand, for now writing mobile variant */
+    overflow-x:scroll;
   }
 }
 
